# ktp_classification

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: lint.yml  release.yml  test.yml
data/KTP.v1i.folder/: README.dataset.txt
ktp_classification/: __init__.py  eval_model.py  model.py  predict.py  train_pipeline.py
ktp_classification/config/: config.py
ktp_classification/processing/: data_manager.py  utils.py
notebook/: ktp_classifier.ipynb
serve/: app.py  config.py  run.sh
serve/schema/: schema.py
streamlit_app/: app.py  start.sh
streamlit_app/utils/: ui.py  utils.py
tests/: conftest.py  test_eval_model.py  test_model.py  test_predict.py
tests/test_processing/: test_data_manager.py  test_utils.py
