[tool.poetry]
name = "ktp-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ktp_classification"}]

[tool.poetry.dependencies]
python = ">3.9.7,<4.0.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
pandas = "^2.2.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
opencv-python = "^4.9.0.80"
tqdm = "^4.66.2"
fastapi = "^0.109.2"
pydantic = "^2.6.2"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
streamlit = "1.24.0" #"^1.31.1"
requests-toolbelt = "^1.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
black = "^24.1.1"
flake8-pyproject = "^1.2.3"
mypy = "^1.8.0"
isort = "^5.13.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"

[tool.poetry.group.semver.dependencies]
python-semantic-release = "^9.0.3"

[tool.semantic_release]
branch = "master"
version_variable = "ktp_classification/__init__.py:__version__"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
tag_commit = true
upload_to_pypi = false
upload_to_release = false
hvcs = "github" # gitlab is also supported

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.

[tool.coverage.paths]
source = [
  "ktp_classification"
]

[tool.coverage.run]
relative_files = true
source = [
  "ktp_classification"
]
branch = true

[tool.coverage.report]
#show_missing = true
exclude_lines = [
    'if __name__ == "__main__":'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
exclude = ".ipynb"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "W503",]
#extend-ignore = "F401"
#exclude = ["E203", "E266", "W503", "F401",]
max-complexity = 10
per-file-ignores = ['helper_functions.py:E501,F401,E402','ktp_classification/processing/utils.py:E501',
                    'ktp_classification/train_pipeline.py:F841', 'tests/test_processing/test_utils.py:E721',]

[tool.mypy]
ignore_errors = true
#disallow_untyped_defs = true
#ignore_missing_imports = true
#no_implicit_optional = true
#show_error_context = true
#show_column_numbers = true
#warn_return_any = true
#warn_unused_ignores = true
#warn_redundant_casts = true
#exclude = ["dist/",]